Refactor : 연관 관계 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     show-sql: true
     database: mysql
 
+    properties:
+      hibernate:
+        format_sql: true
   mvc:
     path match:
       matching-strategy: ant_path_matcher
